--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "repository": "https://github.com/plant-based-games/plants-n-pests",
   "devDependencies": {
     "@tsconfig/node18-strictest-esm": "^1.0.1",
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.13.0",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
@@ -44,5 +45,8 @@
     "ts-node": "^10.9.1",
     "typedoc": "^0.23.24",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
