--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
   },
   "dependencies": {
     "cookie-session": "^2.0.0",
-    "express": "^4.18.2"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "zod": "^3.20.6"
   }
 }
