--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "cookie-session": "^2.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "lodash": "^4.17.21",
     "zod": "^3.20.6"
   }
 }
