--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "chance": "^1.1.10",
     "cookie-session": "^2.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
