--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ opt-level = 1
 opt-level = 3
 
 [dependencies]
+reqwest = { version = "0.11.14", features = ["json", "blocking", "cookies"] }
 web-sys = "0.3.61"
 
 [dependencies.bevy]
