--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,7 @@ opt-level = 1
 opt-level = 3
 
 [dependencies]
-reqwest = { version = "0.11.14", features = ["json", "blocking", "cookies"] }
-web-sys = "0.3.61"
+naia-bevy-client = "0.17.0"
 
 [dependencies.bevy]
 version = "0.9.1"
