--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,10 +17,25 @@ opt-level = 1
 opt-level = 3
 
 [dependencies]
-naia-bevy-client = "0.17.0"
+reqwest = { version="0.11.14", features=['blocking', 'cookies'] }
+wasm-bindgen = "0.2.84"
+js-sys = "0.3.61"
+wasm-bindgen-futures = "0.4.34"
+
+[dependencies.web-sys]
+version = "0.3.61"
+features = [
+    'Headers',
+    'Client',
+    'Request',
+    'RequestInit',
+    'RequestMode',
+    'Response',
+    'Window',
+]
 
 [dependencies.bevy]
-version = "0.9.1"
+version = "0.10.0"
 # Disable the default features if there are any that you do not want
 default-features = false
 features = [
@@ -36,7 +51,6 @@ features = [
     "animation",          # Animation support
     "x11",                # Linux: Support X11 windowing system
     "filesystem_watcher", # Asset hot-reloading
-    "render",             # Graphics Rendering
 
     ## "render" actually just includes:
     ## (feel free to use just a subset of these, instead of "render")
