--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -3,14 +3,46 @@ name: Rust
 on:
   push:
     branches: [ "main" ]
+    paths-ignore:
+      - '**.md'
+      - '.gitignore'
   pull_request:
     branches: [ "main" ]
+    paths-ignore:
+      - '**.md'
+      - '.gitignore'
 
 env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Clone repo
+        uses: actions/checkout@v3
+      - name: Install latest stable toolchain
+        uses: dtolnay/rust-toolchain@stable
+      - name: Cache crates
+        uses: Swatinem/rust-cache@v2
+      - name: Test
+        run: cargo test
+
+clippy:
+  name: Clippy
+  runs-on: ubuntu-latest
+  steps:
+    - name: Clone repo
+      uses: actions/checkout@v3
+    - name: Install latest stable toolchain
+      uses: dtolnay/rust-toolchain@stable
+    - name: Cache crates
+      uses: Swatinem/rust-cache@v2
+    - name: Clippy
+      run: cargo clippy
+
+  format:
 
     runs-on: ubuntu-latest
 
