--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -22,10 +22,18 @@ jobs:
     steps:
       - name: Clone repo
         uses: actions/checkout@v3
+
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install g++ pkg-config libx11-dev libasound2-dev libudev-dev
+          sudo apt-get install libwayland-dev libxkbcommon-dev
       - name: Install latest stable toolchain
         uses: dtolnay/rust-toolchain@stable
+
       - name: Cache crates
         uses: Swatinem/rust-cache@v2
+
       - name: Test
         run: cargo test
 
@@ -35,10 +43,18 @@ jobs:
     steps:
       - name: Clone repo
         uses: actions/checkout@v3
+
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install g++ pkg-config libx11-dev libasound2-dev libudev-dev
+          sudo apt-get install libwayland-dev libxkbcommon-dev
       - name: Install latest stable toolchain
         uses: dtolnay/rust-toolchain@stable
+
       - name: Cache crates
         uses: Swatinem/rust-cache@v2
+
       - name: Clippy
         run: cargo clippy
 
