docs: add documentation for WASM binary optimization

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,22 @@ opt-level = 1
 [profile.dev.package."*"]
 opt-level = 3
 
+[profile.wasm-release]
+# Use release profile as default values
+inherits = "release"
+
+# Optimize with size in mind, also try "s", sometimes it is better.
+# This doesn't increase compilation times compared to -O3, great improvements
+opt-level = "z"
+
+# Do a second optimization pass removing duplicate or unused code from dependencies.
+# Slows compile times, marginal improvements
+lto = "fat"
+
+# When building crates, optimize larger chunks at a time
+# Slows compile times, marginal improvements
+codegen-units = 1
+
 [dependencies]
 reqwest = { version="0.11.18", features=['blocking', 'cookies'] }
 wasm-bindgen = "0.2.87"
@@ -95,3 +111,6 @@ features = [
     #"trace_chrome", # Tracing using the Chrome format
     #"wgpu_trace",   # WGPU/rendering tracing
 ]
+
+[target.wasm32-unknown-unknown]
+runner = "wasm-server-runner"
